@@ -17,9 +17,9 @@ public class App {
 	public static void main(String[] args) {
 		JsonbConfig config = 
 			new JsonbConfig().withPropertyNamingStrategy(
-			  PropertyNamingStrategy.LOWER_CASE_WITH_UNDERSCORES
+			  PropertyNamingStrategy.UPPER_CAMEL_CASE
 			).withNullValues(true)
-			.withLocale(new Locale("tr","TR"))
+			.withLocale(Locale.of("tr","TR"))
 			.withPropertyOrderStrategy(PropertyOrderStrategy.LEXICOGRAPHICAL)
 		    .withFormatting(true);
 		Jsonb jsonb = JsonbBuilder.create(config);
